k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-petstore
  namespace: dev
  labels:
    app: petstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petstore
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
      - name: petstore
        image: tarun00000/petstore:v2
        ports:
        - containerPort: 8080
