k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-petstore
spec:
  type: LoadBalancer
  selector:
    app: petstore
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8080
